--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
     "directories" : { "lib" : "./lib" },
     "bin" : { "xjst" : "./bin/xjst" },
     "dependencies" : {
-        "ometajs" : ">= 2.0.1"
+        "ometajs" : ">= 2.0.1",
+        "optimist": "0.2.x"
     },
     "devDependencies": {
         "benchmark": "0.2.x",
         "cliff": "0.1.x",
         "step": "0.0.4",
         "microtime": "0.1.x",
-        "optimist": "0.2.x",
         "watch": "0.3.x"
     },
     "engines" : { "node" : ">=0.2.0" },
