--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "bin" : { "xjst" : "./bin/xjst" },
     "dependencies" : {
         "coa": "0.1.x",
-        "ometajs" : "2.0.x"
+        "ometajs": "2.0.x",
+        "uglify-js": "1.1.x"
     },
     "devDependencies": {
         "benchmark": "0.2.x",
