[test] unit testing

--- a/package.json
+++ b/package.json
@@ -21,8 +21,14 @@
         "cliff": "0.1.x",
         "q": "0.7.x",
         "microtime": "0.1.x",
-        "watch": "0.3.x"
+        "watch": "0.3.x",
+        "nodeuinit": "0.5.x"
     },
     "engines" : { "node" : ">=0.2.0" },
-    "licenses" : [ { "type" : "AS IS" } ]
+    "licenses" : [ { "type" : "AS IS" } ],
+    "scripts": {
+      "prepublish": "make",
+      "publish": "make clean",
+      "test": "nodeunit test/*/*-test.js"
+    }
 }
