--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
     "name" : "xjst",
     "description" : "XSLT inspired JavaScript templates (with spices)",
-    "version" : "0.0.9",
+    "version" : "0.1.0",
     "homepage": "http://github.com/veged/xjst",
     "author" : "Sergey Berezhnoy <veged@mail.ru> (http://github.com/veged)",
+    "contributors": [
+      "Fedor Indutny <fedor.indutny@gmail.com> (https://github.com/indutny)"
+    ],
     "repository" : {
         "type" : "git",
         "url" : "http://github.com/veged/xjst.git"
