--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "engines" : { "node" : ">=0.2.0" },
     "licenses" : [ { "type" : "AS IS" } ],
     "scripts": {
-      "prepublish": "make",
+      "prepublish": "make -B",
       "publish": "make clean",
       "test": "make test"
     }
