--- a/package.json
+++ b/package.json
@@ -1,37 +1,47 @@
 {
-    "name" : "xjst",
-    "description" : "XSLT inspired JavaScript templates (with spices)",
-    "version" : "0.1.5",
-    "homepage": "http://github.com/veged/xjst",
-    "author" : "Sergey Berezhnoy <veged@mail.ru> (http://github.com/veged)",
-    "contributors": [
-      "Fedor Indutny <fedor.indutny@gmail.com> (https://github.com/indutny)"
-    ],
-    "repository" : {
-        "type" : "git",
-        "url" : "http://github.com/veged/xjst.git"
-    },
-    "main" : "./lib/xjst",
-    "directories" : { "lib" : "./lib" },
-    "bin" : { "xjst" : "./bin/xjst" },
-    "dependencies" : {
-        "coa": "0.1.x",
-        "ometajs": "~ 2.0.11",
-        "uglify-js": "1.1.x"
-    },
-    "devDependencies": {
-        "benchmark": "0.2.x",
-        "cliff": "0.1.x",
-        "q": "0.7.x",
-        "microtime": "0.1.x",
-        "watch": "0.3.x",
-        "nodeunit": "0.5.x"
-    },
-    "engines" : { "node" : ">=0.2.0" },
-    "licenses" : [ { "type" : "AS IS" } ],
-    "scripts": {
-      "prepublish": "make -B",
-      "publish": "make clean",
-      "test": "make test"
+  "name": "xjst",
+  "description": "XSLT inspired JavaScript templates (with spices)",
+  "version": "0.1.6",
+  "homepage": "http://github.com/veged/xjst",
+  "author": "Sergey Berezhnoy <veged@mail.ru> (http://github.com/veged)",
+  "contributors": [
+    "Fedor Indutny <fedor.indutny@gmail.com> (https://github.com/indutny)"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/veged/xjst.git"
+  },
+  "main": "./lib/xjst",
+  "directories": {
+    "lib": "./lib"
+  },
+  "bin": {
+    "xjst": "./bin/xjst"
+  },
+  "dependencies": {
+    "coa": "0.1.x",
+    "ometajs": "~ 2.0.11",
+    "uglify-js": "1.1.x"
+  },
+  "devDependencies": {
+    "benchmark": "0.2.x",
+    "cliff": "0.1.x",
+    "q": "0.7.x",
+    "microtime": "0.1.x",
+    "watch": "0.3.x",
+    "nodeunit": "0.5.x"
+  },
+  "engines": {
+    "node": ">=0.2.0"
+  },
+  "licenses": [
+    {
+      "type": "AS IS"
     }
+  ],
+  "scripts": {
+    "prepublish": "make -B",
+    "publish": "make clean",
+    "test": "make test"
+  }
 }
