--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "dependencies": {
     "coa": "0.2.x",
-    "ometajs": "2.1.x",
+    "ometajs": "~ 2.0.11",
     "uglify-js": "1.1.x"
   },
   "devDependencies": {
