--- a/package.json
+++ b/package.json
@@ -26,10 +26,11 @@
   "devDependencies": {
     "benchmark": "0.2.x",
     "cliff": "0.1.x",
-    "q": "0.7.x",
     "microtime": "0.1.x",
+    "nodeunit": "0.5.x",
+    "q": "0.7.x",
     "watch": "0.3.x",
-    "nodeunit": "0.5.x"
+    "winston": "0.5.x"
   },
   "engines": {
     "node": ">=0.2.0"
