--- a/.npmignore
+++ b/.npmignore
@@ -3,3 +3,6 @@ graph.jpg
 /benchmarks/
 v8.log
 /test/
+/benchmarks/templates/*-private.xjst
+/benchmarks/templates/*-private.js
+/benchmarks/templates/*-private.json
