--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "xjst": "./bin/xjst"
   },
   "dependencies": {
-    "coa": "0.3.x",
+    "coa": "0.3.1",
     "ometajs": "~ 2.1.9",
     "q": "0.7.x",
     "uglify-js": "1.1.x"
