test: port all tests to mocha

--- a/package.json
+++ b/package.json
@@ -29,10 +29,10 @@
     "cliff": "0.1.x",
     "docco": "0.3.x",
     "microtime": "0.2.x",
-    "nodeunit": "0.6.x",
     "q": "0.7.x",
     "watch": "0.5.x",
-    "winston": "0.5.x"
+    "winston": "0.5.x",
+    "mocha": "~1.0.3"
   },
   "engines": {
     "node": ">=0.4.0"
