--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "xjst",
   "description": "XSLT inspired JavaScript templates (with spices)",
-  "version": "0.2.21",
+  "version": "0.2.22",
   "homepage": "http://github.com/veged/xjst",
   "author": "Sergey Berezhnoy <veged@mail.ru> (http://github.com/veged)",
   "contributors": [
@@ -46,5 +46,6 @@
     "prepublish": "make -B",
     "publish": "make clean",
     "test": "make test"
-  }
+  },
+  "optionalDependencies": {}
 }
