--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "coa": "0.3.1",
     "ometajs": "~ 3.1.4",
     "q": "0.8.x",
-    "uglify-js": "1.3.x"
+    "uglify-js": "1.3.x",
+    "spoon": "0.0.1"
   },
   "devDependencies": {
     "benchmark": "0.3.x",
