--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "xjst": "./bin/xjst"
   },
   "dependencies": {
-    "coa": "0.3.1",
+    "coa": "~ 0.3.8",
     "ometajs": "~ 3.1.4",
-    "q": "0.8.x",
+    "q": "~ 0.8.10",
     "uglify-js": "1.3.x",
     "spoon": "~ 0.1.0"
   },
@@ -30,7 +30,6 @@
     "cliff": "0.1.x",
     "docco": "0.3.x",
     "microtime": "0.2.x",
-    "q": "0.7.x",
     "watch": "0.5.x",
     "winston": "0.5.x",
     "mocha": "~1.0.3"
