--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
   },
   "dependencies": {
     "coa": "~ 0.3.8",
-    "ometajs": "~ 3.2.4",
     "q": "~ 0.8.10",
-    "uglify-js": "1.3.x",
-    "spoon": "~ 0.1.3"
+    "spoon": "~ 0.1.3",
+    "esprima": "~1.0.2",
+    "escodegen": "0.0.16",
+    "estraverse": "0.0.4"
   },
   "devDependencies": {
     "benchmark": "0.3.x",
@@ -45,6 +46,6 @@
   "scripts": {
     "prepublish": "make -B",
     "publish": "make clean",
-    "test": "mocha --ignore-leaks --slow 600 --ui tdd --growl --reporter spec test/unit/*-test.js"
+    "test": "mocha --ignore-leaks --slow 600 --ui tdd --growl --reporter spec test/unit/compiler-test.js"
   }
 }
