--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "q": "~ 0.8.10",
     "spoon": "~ 0.1.3",
     "esprima": "~1.0.2",
-    "estraverse": "0.0.4",
-    "uglify-js": "~2.2.5"
+    "uglify-js": "~2.2.5",
+    "estraverse": "~1.1.1"
   },
   "devDependencies": {
     "benchmark": "0.3.x",
